--- a/nvme_ol_85.adoc
+++ b/nvme_ol_85.adoc
@@ -16,48 +16,48 @@ summary: Setting up VMe/FC Host Configuration for Oracle Linux 8.5 with ONTAP, w
 
 == Supportability
 
-NVMe/FC is supported on ONTAP 9.6 or later for Oracle Linux 8.5. Oracle Linux 8.5 host can run both NVMe/FC and FCP traffic through the same fibre channel (FC) initiator adapter ports. See the Hardware Universe for a list of supported FC adapters and controllers. For the most current list of supported configurations see the NetApp Interoperability Matrix.
+NVMe/FC is supported on ONTAP 9.6 or later for Oracle Linux 8.5. Oracle Linux 8.5 host can run both NVMe/FC and FCP traffic through the same fibre channel (FC) initiator adapter ports. See the link:https://hwu.netapp.com/[Hardware Universe^] for a list of supported FC adapters and controllers. For the most current list of supported configurations see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^].
 
 == Features 
 
-*	Oracle Linux 8.5 has In-kernel NVMe multipath enabled by default for NVMe namepsaces.
+*	Oracle Linux 8.5 has in-kernel NVMe multipath enabled by default for NVMe namespaces.
 
-*	With Oracle Linux 8.5, nvme-fc auto-connect scripts are included in the native nvme-cli package. So one may rely on these native auto-connect scripts itself instead of having to install the external vendor provided outbox auto-connect scripts.
+*	With Oracle Linux 8.5, `nvme-fc auto-connect` scripts are included in the native `nvme-cli` package. So you might rely on these native auto-connect scripts itself instead of having to install the external vendor provided outbox auto-connect scripts.
 
-*	With Oracle Linux 8.5, a native udev rule is already provided as part of the nvme-cli package which enables round-robin load balancing for NVMe multipath. So one need not manually create this rule any more (as was done in Oracle Linux 8.1).
+*	With Oracle Linux 8.5, a native `udev` rule is already provided as part of the `nvme-cli` package which enables round-robin load balancing for NVMe multipath. So you need not manually create this rule any more (as was done in Oracle Linux 8.1).
 
-*	With Oracle Linux 8.5, both NVMe and SCSI traffic can be run on the same co-existent host. In fact, that is expected to be the commonly deployed host config for customers. So for SCSI, one may configure dm-multipath as usual for SCSI LUNs resulting in mpath devices, whereas NVMe multipath may be used to configure NVMe-oF multipath devices (i.e. /dev/nvmeXnY) on the host.
+*	With Oracle Linux 8.5, both NVMe and SCSI traffic can be run on the same co-existent host. In fact, that is expected to be the commonly deployed host configuration. So for SCSI, you might configure `dm-multipath` as usual for SCSI LUNs resulting in mpath devices, whereas NVMe multipath may be used to configure NVMe-oF multipath devices (that is, `/dev/nvmeXnY`) on the host.
 
-•	With Oracle Linux 8.5, the NetApp plugin in the native nvme-cli is capable of displaying ONTAP details as well for ONTAP namespaces.
+*	With Oracle Linux 8.5, the NetApp plugin in the native `nvme-cli` is capable of displaying ONTAP details as well for ONTAP namespaces.
 
 == Known limitations
 
-*	NVME/TCP is a tech preview feature and hence the support is not posted on IMT.
+*	NVME/TCP is a technology preview feature and hence the support is not posted on IMT.
 
-*	To comfortably tide over ONTAP failover events such as storage failovers (SFOs) for NVMe/TCP, it is advised to set a longer retry period such as say 30 minutes by tweaking the ctrl_loss_tmo timer. Details given below.
+*	To comfortably tide over ONTAP failover events such as storage failovers (SFOs) for NVMe/TCP, it is advised to set a longer retry period such as say 30 minutes by tweaking the `ctrl_loss_tmo` timer. See the following details.
 
 
 == Configuration requirements
 
-Please refer to the NetApp InterOperability Matrix (IMT) for exact details regarding supported configs. 
+Refer to the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for exact details regarding supported configurations. 
  
 == Enabling NVMe/FC with Oracle Linux 8.5
 
-.	Install Oracle Linux 8.5 GA on the server. After the installation is complete, verify that you are running the specified Oracle Linux 8.5 GA kernel. See the NetApp Interoperability Matrix for the most current list of supported versions.
+.	Install Oracle Linux 8.5 General Availability (GA) on the server. After the installation is complete, verify that you are running the specified Oracle Linux 8.5 GA kernel. See the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^] for the most current list of supported versions.
 +
 ----
 # uname -r
 5.4.17-2136.309.4.el8uek.x86_64
 ----
 
-.	Install the nvme-cli package.
+.	Install the `nvme-cli` package.
 +
 ----
 # rpm -qa|grep nvme-cli
 nvme-cli-1.14-3.el8.x86_64
 ----
 
-.	On the Oracle Linux 8.5 host, check the hostnqn string at /etc/nvme/hostnqn and verify that it matches the hostnqn string for the corresponding subsystem on the ONTAP array.
+.	On the Oracle Linux 8.5 host, check the `hostnqn` string at `/etc/nvme/hostnqn` and verify that it matches the `hostnqn` string for the corresponding subsystem on the ONTAP array.
 +
 ----
 # cat /etc/nvme/hostnqn
@@ -69,46 +69,61 @@ vs_ol_nvme
               nvme_ss_ol_1
                                  nqn.2014-08.org.nvmexpress:uuid:9ed5b327-b9fc-4cf5-97b3-1b5d986345d1
 ----
-
++
 [NOTE] 
-If the hostnqn strings do not match, you should use the `vserver modify` command to update the hostnqn string on your corresponding ONTAP array subsystem to match to the hostnqn string from `/etc/nvme/hostnqn` on the host.
+If the `hostnqn` strings do not match, you should use the `vserver modify` command to update the `hostnqn` string on your corresponding ONTAP array subsystem to match to the `hostnqn` string from `/etc/nvme/hostnqn` on the host.
 
 .	Reboot the host.
-
-•	Note: If one intends to run both NVMe & SCSI traffic on the same Oracle Linux 8.5 co-existent host, it is recommended to use in-kernel NVMe multipath for ONTAP namespaces and dm-multipath for ONTAP LUNs respectively. And that also means the ONTAP namespaces should be blacklisted in dm-multipath to prevent dm-multipath from claiming these namespace devices. This can be done by adding the enable_foreign setting to the /etc/multipath.conf:
 +
+
+[NOTE]
+=====
+If you intend to run both NVMe and SCSI traffic on the same Oracle Linux 8.5 co-existent host, it is recommended to use in-kernel NVMe multipath for ONTAP namespaces and `dm-multipath` for ONTAP LUNs respectively. And that also means the ONTAP namespaces should be blacklisted in `dm-multipath` to prevent `dm-multipath` from claiming these namespace devices. This can be done by adding the `enable_foreign` setting to the `/etc/multipath.conf`:
+
 ----
 # cat /etc/multipath.conf
 defaults {
         enable_foreign     NONE
 }
 ----
+=====
 
-Restart the multipathd daemon by running a systemctl restart multipathd to let the new setting take effect.
+Restart the `multipathd` daemon by running a `systemctl restart multipathd` to let the new setting take effect.
 
 === Configuring the Broadcom FC adapter for NVMe/FC
 
-.	Verify that you are using the supported adapter. For the most current list of supported adapters see the NetApp Interoperability Matrix.
+.	Verify that you are using the supported adapter. For the most current list of supported adapters see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^].
++
+----
 # cat /sys/class/scsi_host/host*/modelname
 LPe32002-M2
 LPe32002-M2
 # cat /sys/class/scsi_host/host*/modeldesc
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
 Emulex LightPulse LPe32002-M2 2-Port 32Gb Fibre Channel Adapter
+----
 
-2.	Verify that you are using the recommended Broadcom lpfc firmware & inbox driver. For the most current list of supported adapter driver & firmware versions, see the NetApp Interoperability Matrix.
+.	Verify that you are using the recommended Broadcom lpfc firmware & inbox driver. For the most current list of supported adapter driver & firmware versions, see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix^].
++
+----
 # cat /sys/class/scsi_host/host*/fwrev
 14.0.505.11, sli-4:2:c
 14.0.505.11, sli-4:2:c
 
 # cat /sys/module/lpfc/version
 0:12.8.0.11
+----
 
-3.	Verify that lpfc_enable_fc4_type is set to 3
+.	Verify that lpfc_enable_fc4_type is set to 3
++
+----
 # cat /sys/module/lpfc/parameters/lpfc_enable_fc4_type
 3
+----
 
-4.	Verify that the initiator ports are up and running, and able to see the target LIFs.
+.	Verify that the initiator ports are up and running, and able to see the target LIFs.
++
+----
 # cat /sys/class/fc_host/host*/port_name
 0x100000109b1c1204
 0x100000109b1c1205
@@ -138,18 +153,18 @@ LS XMIT: Err 00000000 CMPL: xb 00000000 Err 00000000
 Total FCP Cmpl 000000002e14f170 Issue 000000002e14f17a OutIO 000000000000000a
 abort 000016bb noxri 00000000 nondlp 00000000 qdepth 00000000 wqerr 00000000 err 00000000
 FCP CMPL: xb 00001f50 Err 0000d9f8
+----
 
 ===	Enabling 1MB I/O size
 
-.	The lpfc_sg_seg_cnt parameter needs to be set to 256 for the lpfc driver to issue I/O requests upto 1 MB size.
+.	The `lpfc_sg_seg_cnt` parameter needs to be set to 256 for the lpfc driver to issue I/O requests upto 1 MB size.
 +
 ----
 # cat /etc/modprobe.d/lpfc.conf
 options lpfc lpfc_sg_seg_cnt=256
 ----
 
-.	Run a dracut -f command and then reboot the host.
-  After the host boots up, verify that lpfc_sg_seg_cnt is set to 256.
+.	Run a dracut -f command and then reboot the host. After the host boots up, verify that `lpfc_sg_seg_cnt` is set to 256.
   +
   ----
   # cat /sys/module/lpfc/parameters/lpfc_sg_seg_cnt
@@ -166,7 +181,7 @@ QLE2742 FW:v9.06.02 DVR:v10.02.00.106-k
 QLE2742 FW:v9.06.02 DVR:v10.02.00.106-k
 ----
 
-.	Verify ql2xnvmeenable is set which enables the Marvell adapter to function as a NVMe/FC initiator:
+.	Verify `ql2xnvmeenable` is set which enables the Marvell adapter to function as a NVMe/FC initiator:
 +
 ----
 # cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
@@ -230,7 +245,7 @@ sectype: none
 # nvme discover -t tcp -w 192.168.2.9 -a 192.168.2.57
 ----
 
-.	Now run a 'nvme connect-all' across all the supported NVMe/TCP initiator-target LIFs across the nodes. Ensure you pass a longer ctrl_loss_tmo period (such as say 30 minutes, which can be set through '-l 1800') during the connect-all so that it would retry for a longer period in the event of a path loss. For e.g.
+.	Now run a `nvme connect-all across all the supported NVMe/TCP initiator-target LIFs across the nodes. Ensure you pass a longer `ctrl_loss_tmo` period (such as say 30 minutes, which can be set through `-l 1800`) during the `connect-all` so that it would retry for a longer period in the event of a path loss. For example,
 +
 ----
 # nvme connect-all -t tcp -w 192.168.1.8 -a 192.168.1.51 -l 1800
@@ -258,11 +273,17 @@ round-robin
 +
 ----
 # nvme list
-Node                  SN                                            Model                                                Namespace Usage                            Format         FW Rev
---------------------   ---------------------------------------  ----------------------------------------------- ----------------- ------------------------------- ---------------- ---------------
-/dev/nvme0n1     814vWBNRwf9HAAAAAAAB  NetApp ONTAP Controller                1                  85.90 GB / 85.90 GB     4 KiB + 0 B   FFFFFFFF
-/dev/nvme0n2     814vWBNRwf9HAAAAAAAB  NetApp ONTAP Controller                2                  85.90 GB / 85.90 GB     4 KiB + 0 B   FFFFFFFF
-/dev/nvme0n3     814vWBNRwf9HAAAAAAAB  NetApp ONTAP Controller                3                  85.90 GB / 85.90 GB     4 KiB + 0 B   FFFFFFFF
+Node         SN                    Model      
+---------------------------------------------------------------
+/dev/nvme0n1 814vWBNRwf9HAAAAAAAB  NetApp ONTAP Controller                                
+/dev/nvme0n2 814vWBNRwf9HAAAAAAAB  NetApp ONTAP Controller                                 
+/dev/nvme0n3 814vWBNRwf9HAAAAAAAB  NetApp ONTAP Controller                                  
+
+Namespace Usage  Format                  FW            Rev
+--------------------------------------------------------------
+1                85.90 GB / 85.90 GB     4 KiB + 0 B   FFFFFFFF
+2                85.90 GB / 85.90 GB     4 KiB + 0 B   FFFFFFFF
+3                85.90 GB / 85.90 GB     4 KiB + 0 B   FFFFFFFF
 ----
 
 .	Verify that the controller state of each path is live and have proper ANA status
@@ -281,11 +302,17 @@ nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.5f5f2c4aa73b11e9967e00a098df41bd:su
 +
 ----
 # nvme netapp ontapdevices -o column
-Device                 Vserver                         Namespace Path                                                          NSID    UUID                                                             Size
------------------------ ------------------------------ ----------------------------------------------------------------------- --------- ---------------------------------------------------------- ---------
-/dev/nvme0n1      vs_ol_nvme            /vol/ol_nvme_vol_1_1_0/ol_nvme_ns              1          72b887b1-5fb6-47b8-be0b-33326e2542e2   85.90GB
-/dev/nvme0n2      vs_ol_nvme            /vol/ol_nvme_vol_1_0_0/ol_nvme_ns              2          04bf9f6e-9031-40ea-99c7-a1a61b2d7d08    85.90GB
-/dev/nvme0n3      vs_ol_nvme            /vol/ol_nvme_vol_1_1_1/ol_nvme_ns              3          264823b1-8e03-4155-80dd-e904237014a4  85.90GB
+Device       Vserver  Namespace Path                                                       
+-----------------------------------
+/dev/nvme0n1  vs_ol_nvme  /vol/ol_nvme_vol_1_1_0/ol_nvme_ns              
+/dev/nvme0n2  vs_ol_nvme  /vol/ol_nvme_vol_1_0_0/ol_nvme_ns              
+/dev/nvme0n3  vs_ol_nvme  /vol/ol_nvme_vol_1_1_1/ol_nvme_ns              
+
+NSID    UUID                                   Size
+-----------------------------------------------------
+1       72b887b1-5fb6-47b8-be0b-33326e2542e2   85.90GB
+2       04bf9f6e-9031-40ea-99c7-a1a61b2d7d08   85.90GB
+3       264823b1-8e03-4155-80dd-e904237014a4   85.90GB
 
 # nvme netapp ontapdevices -o json
 {
@@ -325,11 +352,12 @@ Device                 Vserver                         Namespace Path           
 ----
 
 == Troubleshooting
-Before commencing any troubleshooting for any NVMe/FC failures, always ensure you are running a config that is compliant to the IMT specifications. And then proceed to the next steps below to debug any host side issues here.
+
+Before commencing any troubleshooting for any NVMe/FC failures, always ensure you are running a configuration that is compliant to the IMT specifications. And then proceed to the next steps below to debug any host side issues here.
 
 === lpfc verbose logging
 
-Given below is the list of lpfc driver logging bitmasks available for NVMe/FC, as seen at drivers/scsi/lpfc/lpfc_logmsg.h: 
+Given below is the list of lpfc driver logging bitmasks available for NVMe/FC, as seen at `drivers/scsi/lpfc/lpfc_logmsg.h`: 
 +
 ----
 #define LOG_NVME 0x00100000 /* NVME general events. */
@@ -348,9 +376,11 @@ lpfc_enable_fc4_type=3 lpfc_log_verbose=0xf00083
 ----
 
 === qla2xxx verbose logging
+
 Unfortunately, there is no similar specific qla2xxx logging for NVMe/FC, as there is in lpfc. So you may set the general qla2xxx logging level here: `ql2xextended_error_logging=0x1e400000`. 
+
 This can be done by appending this value to the corresponding modprobe qla2xxx conf file. 
-And then recreate the initramfs by running 'dracut -f' and then reboot the host. After reboot, verify that the verbose logging has applied as follows:
+And then recreate the initramfs by running `dracut -f` and then reboot the host. After reboot, verify that the verbose logging has applied as follows:
 +
 ----
 # cat /etc/modprobe.d/qla2xxx.conf
@@ -367,10 +397,10 @@ The errors displayed by nvme-cli during nvme discover, nvme connect or nvme conn
 |===
 |Errors displayed by nvme-cli	|Probable cause	|Workaround 
 |nvme-cli displays "Failed to write to /dev/nvme-fabrics: Invalid argument" error during nvme discover, nvme connect or nvme connect-all	|Incorrect syntax	Ensure you are using the correct syntax for the above nvme commands. 
-|nvme-cli displays "Failed to write to /dev/nvme-fabrics: No such file or directory" during nvme discover, nvme connect or nvme connect-all	Multiple issues could trigger this. Some of the common cases are: 
+|nvme-cli displays "Failed to write to /dev/nvme-fabrics: No such file or directory" during nvme discover, nvme connect or nvme connect-all	|Multiple issues could trigger this. Some of the common cases are: 
 You passed wrong arguments to the above nvme commands.
-	1.	Ensure you have passed the proper arguments itself (like proper WWNN string, WWPN string, etc.) for the above commands.
-2.	If the arguments are correct, but still seeing this error, check if the /sys/class/scsi_host/host*/nvme_info output is proper with the NVMe intiator showing as "Enabled" & NVMe/FC target LIFs properly showing up here under the remote ports sections. For example,
+a|.	Ensure you have passed the proper arguments itself (like proper WWNN string, WWPN string, etc.) for the above commands.
+.	If the arguments are correct, but still seeing this error, check if the /sys/class/scsi_host/host*/nvme_info output is proper with the NVMe intiator showing as "Enabled" & NVMe/FC target LIFs properly showing up here under the remote ports sections. For example,
 +
 ----
 # cat /sys/class/scsi_host/host*/nvme_info
@@ -389,18 +419,18 @@ LS: Xmt 0000000000000006 Cmpl 0000000000000006
 FCP: Rd 0000000000000073 Wr 0000000000000005 IO 0000000000000031
 Cmpl 00000000000000a8 Outstanding 0000000000000001
 ----
-3.	If the target LIFs don't show up as above in the nvme_info output, check the /var/log/messages & dmesg output for any suspicious NVMe/FC failures, and report/fix accordingly.
+.	If the target LIFs don't show up as above in the nvme_info output, check the /var/log/messages & dmesg output for any suspicious NVMe/FC failures, and report/fix accordingly.
 
-nvme-cli displays "No discovery log entries to fetch" during nvme discover, nvme connect or nvme connect-all	This error message is generally seen if the /etc/nvme/hostnqn string has not been added to the corresponding subsystem on the NetApp array. Or an incorrect hostnqn string has been added to the respective subsystem.	Ensure the exact /etc/nvme/hostnqn string is added to the corresponding subsystem on the NetApp array (verify through the 'vserver nvme subsystem host show').
+|nvme-cli displays "No discovery log entries to fetch" during nvme discover, nvme connect or nvme connect-all	|This error message is generally seen if the /etc/nvme/hostnqn string has not been added to the corresponding subsystem on the NetApp array. Or an incorrect hostnqn string has been added to the respective subsystem.	|Ensure the exact /etc/nvme/hostnqn string is added to the corresponding subsystem on the NetApp array (verify through the 'vserver nvme subsystem host show').
 
-nvme-cli displays "Failed to write to /dev/nvme-fabrics: Operation already in progress" during nvme discover, nvme connect or nvme connect-all
-	This error message is seen if the controller associations or specified operation is already created or in the process of being created. This could happen as part of the auto-connect scripts installed above.
-	1.	None. For nvme discover, just try running this command after some time. And maybe for nvme connect & connect-all, run a "nvme list" to verify that the namespace devices are already created and displayed on the host.
-
-===|
+| nvme-cli displays "Failed to write to /dev/nvme-fabrics: Operation already in progress" during nvme discover, nvme connect or nvme connect-all
+| This error message is seen if the controller associations or specified operation is already created or in the process of being created. This could happen as part of the auto-connect scripts installed above.
+|	None. For nvme discover, just try running this command after some time. And maybe for nvme connect & connect-all, run a "nvme list" to verify that the namespace devices are already created and displayed on the host.
+|===
 
 == Files and command outputs required for debugging 
-If you are still facing issues, please collect the following files & command outputs and send them to us for further triage: 
+
+If you are still facing issues, please collect the following files and command outputs and send them to us for further triage: 
 +
 ----
 •	cat /sys/class/scsi_host/host*/nvme_info
